--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx terser main.js -o dist/main.min.js --mangle"
+    "build": "npx terser main.js -o dist/main.min.js --mangle --comments /==UserScript==/i"
 
   },
   "author": "xiaosan",
